[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/Sequence.png" type="Texture" id=1]
[ext_resource path="res://art/light.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Sequence.gd" type="Script" id=3]
[ext_resource path="res://art/False.png" type="Texture" id=4]
[ext_resource path="res://art/Unevaluated.png" type="Texture" id=5]
[ext_resource path="res://art/True.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65.0843, 22.765 )

[sub_resource type="CircleShape2D" id=2]
radius = 12.6688

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="CircleShape2D" id=4]
radius = 16.0382

[sub_resource type="CircleShape2D" id=5]
radius = 16.0

[sub_resource type="CircleShape2D" id=6]
radius = 16.0

[node name="SequenceNode" type="Sprite"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="NotEvaluated" type="Sprite" parent="."]
position = Vector2( 31, -31 )
texture = ExtResource( 5 )

[node name="True" type="Sprite" parent="."]
position = Vector2( 31, -31 )
texture = ExtResource( 6 )

[node name="False" type="Sprite" parent="."]
position = Vector2( 31, -31 )
texture = ExtResource( 4 )

[node name="Drag" type="Area2D" parent="."]
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drag"]
shape = SubResource( 1 )

[node name="ConnectParent" type="Area2D" parent="."]
position = Vector2( -0.778519, -39.9636 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectParent"]
position = Vector2( 0, -0.259502 )
shape = SubResource( 2 )

[node name="ConnectChild1" type="Area2D" parent="."]
position = Vector2( -11.7005, -1.72067 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectChild1"]
position = Vector2( -48.2678, 41.4446 )
shape = SubResource( 3 )

[node name="ConnectChild2" type="Area2D" parent="."]
position = Vector2( -18.2391, -1.20447 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectChild2"]
position = Vector2( -4.93057, 42.2231 )
shape = SubResource( 4 )

[node name="ConnectChild3" type="Area2D" parent="."]
position = Vector2( -24.9497, -1.0324 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectChild3"]
position = Vector2( 37.7355, 41.0016 )
shape = SubResource( 5 )

[node name="ConnectChild4" type="Area2D" parent="."]
position = Vector2( 49.2111, 34.9295 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectChild4"]
position = Vector2( -1.52588e-05, 4.81786 )
shape = SubResource( 6 )

[node name="Light1" type="Light2D" parent="."]
position = Vector2( 0, -40.483 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="Light2" type="Light2D" parent="."]
position = Vector2( -59.8809, 39.8903 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Light3" type="Light2D" parent="."]
position = Vector2( -23.1696, 41.3542 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Light4" type="Light2D" parent="."]
position = Vector2( 13.0226, 42.381 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Light5" type="Light2D" parent="."]
position = Vector2( 49.039, 39.4033 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[connection signal="input_event" from="Drag" to="." method="_on_Drag_input_event"]
[connection signal="input_event" from="ConnectParent" to="." method="_on_ConnectParent_input_event"]
[connection signal="mouse_entered" from="ConnectParent" to="." method="_on_ConnectParent_mouse_entered"]
[connection signal="mouse_exited" from="ConnectParent" to="." method="_on_ConnectParent_mouse_exited"]
[connection signal="input_event" from="ConnectChild1" to="." method="_on_ConnectChild1_input_event"]
[connection signal="mouse_entered" from="ConnectChild1" to="." method="_on_ConnectChild1_mouse_entered"]
[connection signal="mouse_exited" from="ConnectChild1" to="." method="_on_ConnectChild1_mouse_exited"]
[connection signal="input_event" from="ConnectChild2" to="." method="_on_ConnectChild2_input_event"]
[connection signal="mouse_entered" from="ConnectChild2" to="." method="_on_ConnectChild2_mouse_entered"]
[connection signal="mouse_exited" from="ConnectChild2" to="." method="_on_ConnectChild2_mouse_exited"]
[connection signal="input_event" from="ConnectChild3" to="." method="_on_ConnectChild3_input_event"]
[connection signal="mouse_entered" from="ConnectChild3" to="." method="_on_ConnectChild3_mouse_entered"]
[connection signal="mouse_exited" from="ConnectChild3" to="." method="_on_ConnectChild3_mouse_exited"]
[connection signal="input_event" from="ConnectChild4" to="." method="_on_ConnectChild4_input_event"]
[connection signal="mouse_entered" from="ConnectChild4" to="." method="_on_ConnectChild4_mouse_entered"]
[connection signal="mouse_exited" from="ConnectChild4" to="." method="_on_ConnectChild4_mouse_exited"]
